--- a/css/index.css
+++ b/css/index.css
@@ -48,50 +48,78 @@ main .wrapper{
     margin-right: 50px;
     flex-grow: 1;
 }
-.left_input input{
-    display: block;
-    width: 100%;    
+
+.left_input p{
+    font-size: 1.6rem;
+    font-weight: 600px;
+    margin-bottom: 14px;
 }
 
 .left_input label{
     display: block;
     margin-bottom: 40px;
 }
-.left_input label p{
-    font-size: 1.6rem;
-    font-weight: 600px;
-    margin-bottom: 14px;
+
+.left_input>label>input{
+    display: block;
+    width: 100%;    
 }
+
 .left_input label input{
     height: 40px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: var(--sub_brown);
     border-radius: 5px;
     border: 1px solid var(--sub_brown);
+    box-sizing: border-box;
+    padding-left: 12px;
 }
+
 .left_input label input:focus{
     outline: 1px solid var(--pri_brown);
     
+}
+
+/* error input */
+.left_input label.-on::after{
+    position: relative;
+    bottom: -10px;
+    font-size: 1.2rem;
+    color: var(--pri_pink);
+}
+.left_input .hex.-on::after{
+    content: "Invalid value! Please provide 6 numbers.";
+}
+.left_input .rgb.-on::after{
+    content: "Invalid value! Rember to add ','.";
+}
+.left_input label.-on input{
+    border: 2px solid var(--pri_pink);
 }
 
 /* right */
 .right_input{
     position: relative;
 }
-.right_input::after{
-    content: attr(data-input);
+.right_input_showColor{
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
     padding: 10px 20px;
-    background-color: var(--pri_rice);
-    font-size: 1.6rem;
-
+    background-color: #fff;
+    font-size: 1.4rem;
+    border-radius: 5px;
+    pointer-events: none;
 }
 .color_picker{
     width: 400px;
     height: 400px;
-    border-radius: 5px;
+    background-color: #ffffff00;
+    border: none;
+    cursor: pointer;
 }
-
+.color_picker::-webkit-color-swatch{
+    border-radius: 15px;
+    border: none;
+}
